# SCT

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml
examples/: sct_70b_flex.py  sct_RankSweep_1_7B.ipynb  sct_convergence_1.7B.py  sct_convergence_1_7B.ipynb  sct_from_scratch_1.7B.ipynb  sct_from_scratch_mac_1.7B.py  sct_per_component_lr.ipynb  sct_scratch_ckpt_5000.json  sct_smollm2.py  sct_steamdeck.py  sct_vs_dense.py
results/colab_a100/: sct_conv_dense_losses.json  sct_conv_summary_colab.json  sct_per_component_lr.txt  sct_per_component_lr_losses.json  sct_rank_sweep_dense_losses.json  sct_rank_sweep_r128_losses.json  sct_rank_sweep_r256_losses.json  sct_rank_sweep_r32_losses.json  sct_rank_sweep_r64_losses.json  sct_rank_sweep_summary.json
results/mac/: sct_70b_flex_console.txt  sct_70b_memory_results.json  sct_smollm2_console.txt  sct_smollm2_results.json  sct_vs_dense_console.txt  sct_vs_dense_results.json
results/steamDeck/: SteamDeck-Konsole-Output.txt
spectral_compact_training/: __init__.py  mlp_debug.py  mlp_proof_results.json  spectral_layer.py
